feat: added hover and checked state to donate interactive section

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/styles/reset.css">
     <link rel="stylesheet" href="assets/fonts/icon-font.css">
-    <link rel="stylesheet" href="assets/sass-css/pages/main-page.css">
+    <link rel="stylesheet" href="pages/main/sass-css/main-page.css">
     <title>PetStory Online</title>
 </head>
 <body>
 <div class="page">
     <header class="header">
         <div class="container">
-            <a class="logo" id="start-page">
+            <a class="logo" href="#" id="start-page">
                 <h1 class="logo-header">PetStory <span>o</span>nline</h1>
                 <div class="bamboo">
                     <img src="assets/images/bamboo.svg" alt="bamboo logo">
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="active" href="#">About</a></li>
                     <li class="nav-item"><a href="#">Map</a></li>
                     <li class="nav-item"><a href="#">Zoos</a></li>
-                    <li class="nav-item"><a href="#">Donate</a></li>
+                    <li class="nav-item"><a href="pages/donate/donate.html">Donate</a></li>
                     <li class="nav-item"><a href="#">Contact us</a></li>
                     <li class="nav-item"><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
                                             title="designed by">Designed by &copy;</a></li>
@@ -461,10 +461,11 @@
                 </div>
             </div>
 
-            <div class="copyright">
+            <a href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks" class="copyright"
+               title="designed by alisa samborskaya">
                 <p>Designed by Alisa Samborskaya</p>
                 <p>&copy;RSSchool & &copy;Yem Digital 2021</p>
-            </div>
+            </a>
         </div>
 
     </footer>
