--- a/react-ts-app/index.html
+++ b/react-ts-app/index.html
@@ -7,7 +7,7 @@
   <title>Cultured kid.</title>
 </head>
 <body>
-<div id='root'></div>
-<script type='module' src='./src/main.tsx'></script>
+<div id='root'>not rendered</div>
+<script type='module' src='./src/ClientApp.tsx'></script>
 </body>
 </html>
